--- a/store/.env
+++ b/store/.env
@@ -1,13 +1,13 @@
-DEBUG=True
+DEBUG=False
 SECRET_KEY=django-insecure-6)hy6ucn0czj&tol$ycci&22o2e59@9v_dn@en&xr$pj9w@uxw
 DOMAIN_NAME=http://127.0.0.1:8000
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
-DATABASE_NAME=store_db
-DATABASE_USER=store_username
-DATABASE_PASSWORD=store_password
+DATABASE_NAME=store_db_production
+DATABASE_USER=store_username_production
+DATABASE_PASSWORD=store_password_production
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 
